--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "guzzle/guzzle": "~3.7"
     },
     "require-dev": {
-        "codeception/codeception": "@stable"
+        "codeception/codeception": "@stable",
+        "satooshi/php-coveralls": "dev-master"
     },
     "autoload": {
         "psr-0": {
