--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,6 @@ before_script:
 script: vendor/bin/codecept run unit --coverage --report --xml
 
 after_success:
-  - ls
+  - ls -l
+  - ls -l tests
+  - ls -l tests/_log
