--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: php
 
 php:
+  - 5.3
   - 5.4
+  - 5.5
+  - 5.6
+  - hhvm
 
 before_script:
   - composer self-update
@@ -11,10 +15,14 @@ before_script:
 script: vendor/bin/codecept run unit --coverage --report --xml
 
 after_success:
-  - ls -l tests/_log
-  - cat tests/_log/coverage.xml
-  - cat tests/_log/report.xml
   - mkdir build
   - mkdir build/logs
   - cp tests/_log/coverage.xml build/logs/clover.xml
   - php vendor/bin/coveralls -v
+
+matrix:
+  allow_failures:
+    - php: 5.3
+    - php: 5.5
+    - php: 5.6
+    - php: hhvm
