--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,10 @@ before_script:
 script: vendor/bin/codecept run unit --coverage --report --xml
 
 after_success:
-  - php vendor/bin/coveralls -v
+ - mkdir build
+ - mkdir build/logs
+ - cp tests/_log/coverage.xml build/logs/clover.xml
+ - php vendor/bin/coveralls -v
 
 matrix:
   allow_failures:
