--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
     }
   ],
   "require": {
-    "php": ">=5.3.3",
+    "php": ">=5.6",
     "guzzlehttp/guzzle": "^6.1"
   },
   "require-dev": {
     "codeception/codeception": "@stable",
-    "satooshi/php-coveralls": "dev-master"
+    "satooshi/php-coveralls": "^1.0"
   },
   "autoload": {
     "psr-4": {
