--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
   - composer self-update
   - composer install --prefer-source
 
-script: vendor/bin/codecept run unit --coverage --report --xml
+script: vendor/bin/codecept run unit --coverage --report --coverage-xml
 
 after_success:
  - mkdir build
